--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,16 @@ MONGO_URI=mongodb://localhost:27017/placement_db
 JWT_SECRET=my_super_secret_key_12345
 JWT_EXPIRES_IN=7d
 NODE_ENV=development
+
+# ==============================
+# Backend Environment Variables
+# ==============================
+
+# MongoDB Atlas connection string
+MONGO_URI=mongodb+srv://kuldipmahale2005_db_user:Kuldip2005@cluster0.vpyzw5z.mongodb.net/placementDB?retryWrites=true&w=majority
+
+# Backend server port
+PORT=5000
+
+# Node environment
+NODE_ENV=development
